# Smart-ParkingLot

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  tempCodeRunnerFile.cpp
doc/: User Interface.pptx
html/: _buzzer_class_8h_source.html  _m_f_r_c522_8h_source.html  _r_f_i_dclass_8h_source.html  annotated.html  bcm2835_8h_source.html  blink_8c-example.html  class_buzzer_class-members.html  class_buzzer_class.html  class_m_f_r_c522-members.html  class_m_f_r_c522.html  class_r_f_i_d_callback-members.html  class_r_f_i_d_callback.html  class_r_f_i_dclass-members.html  class_r_f_i_dclass.html  class_window-members.html  class_window.html  classa_callback-members.html  classa_callback.html  classa_park_callback-members.html  classa_park_callback.html  classes.html  classparking_lot-members.html  classparking_lot.html  classultrasonic_callback-members.html  classultrasonic_callback.html  classultrasonic_sensor_class-members.html  classultrasonic_sensor_class.html  dir_0800afdb795e03c5abc3fecb96ec099f.html  dir_091cb7e720a545c3c3ea148b1a575ce2.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_15ae648eadc0f6ecf808f69f77cb7de0.html  dir_1781416efbcc21ba5ca2cc29aa143be5.html  dir_2b19e1647a9be331e8c06cbcafff1ac7.html  dir_2f4052067ea2b602beeee0779e421b9a.html  dir_49749460095f7a90637780dab0093569.html  dir_4acbd3599cab309e80120c419c9a5ec1.html  dir_4c2343b86c4cab46030e155d6df19bab.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_50c625bbb1070a20ac98a5d2decfda20.html  (+49 more)
latex/: _buzzer_class_8h_source.tex  _m_f_r_c522_8h_source.tex  _r_f_i_dclass_8h_source.tex  annotated.tex  bcm2835_8h_source.tex  blink_8c-example.tex  class_buzzer_class.tex  class_m_f_r_c522.tex  class_r_f_i_d_callback.eps  class_r_f_i_d_callback.tex  class_r_f_i_dclass.tex  class_window.tex  classa_callback.eps  classa_callback.tex  classa_park_callback.eps  classa_park_callback.tex  classparking_lot.tex  classultrasonic_callback.eps  classultrasonic_callback.tex  classultrasonic_sensor_class.tex  event_8c-example.tex  examples.tex  files.tex  group__constants.tex  group__gpio.tex  group__i2c.tex  group__init.tex  group__lowlevel.tex  group__spi.tex  index.tex  (+18 more)
src/: BuzzerClass.cpp  CMakeLists.txt  MFRC522.cpp  RFIDClass.cpp  TestRFID.cpp  Window.cpp  Window.h  main.cpp  parkCallback.cpp  parkClass.cpp  parkClass.h  parkLed.cpp  parkLed.h  parkingLot.cpp  parkingLot.h  window.cpp  window.h
src/gui/interface/: interface.cpp  window.cpp  window.h
src/gui/qrcode/: main.cpp
src/helloworld/: BlinkingLED.cpp  helloworld.cpp
src/helloworld/demo_project/: CMakeLists.txt
src/helloworld/demo_project/src/: CMakeLists.txt  helloworld.cpp  helloworld.h  main.cpp
src/helloworld/demo_project/test/: CMakeLists.txt  MyTest.cpp
src/os/: BuzzerClass.cpp  BuzzerClass.h  GPIOClass.cpp  LCDdisplay.cpp  RFID_main.cpp  RFID_main.h  RFIDclass.cpp  RFIDclass.h  gpio.cpp  gpio.h  ultrasonic.cpp  ultrasonicSensorClass.cpp  ultrasonicSensorClass.h
src/os/GPIO/: GPIOClass.cpp  GPIOClass.h
src/os/I2C/: I2CIO.cpp  I2CIO.h  LCD.cpp  LCD.h  LiquidCrystal.cpp  LiquidCrystal.h  LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h  README.md
src/os/RFID/: RFID.cpp  RFID.h
(+52 files in other folders)
